[package]
name = "langid"
version = "0.0.1"
description = "NGram-based language identification"
authors = ["Aleksei Voronov <despawn@gmail.com>"]
repository = "https://github.com/despawnerer/langid-rs"
keywords = ["langid", "language", "classification", "text"]
license = "MIT/Apache-2.0"

[dependencies]
rustc-serialize = "0.3.18"
itertools = "0.4.11"
getopts = "0.2.14"

[dev-dependencies]
glob = "0.2.11"
